--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,8 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.7</java.version>
+		<spring-security-jwt.version>1.0.6.RELEASE</spring-security-jwt.version>
+		<tomcat.version>8.0.11</tomcat.version>
 	</properties>
 
 	<build>
